Changed to use NS_IMPL_THREADSAFE_ISUPPORTS1, patch by dougt, bug 61558, r=nhotta, sr=mscott.