intl/locale/src/nsLocaleService.cpp
@@ -577,7 +577,7 @@ nsLocaleServiceFactory::~nsLocaleServiceFactory()
 {
 }
 
-NS_IMPL_ISUPPORTS1(nsLocaleServiceFactory,nsIFactory)
+NS_IMPL_THREADSAFE_ISUPPORTS1(nsLocaleServiceFactory,nsIFactory)
 
 NS_IMETHODIMP
 nsLocaleServiceFactory::CreateInstance(nsISupports* aOuter,
